--- a/OwnVpnClient/OwnVpnClient.csproj
+++ b/OwnVpnClient/OwnVpnClient.csproj
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.5" />
     <PackageReference Include="PcapDotNet" Version="0.10.2" />
     <PackageReference Include="PcapDotNet.Packets" Version="1.0.4.1" />
     <PackageReference Include="WebSocketSharp-netstandard" Version="1.0.1" />
